# llm-proxy

./: .gitignore  AGENTS.md  Dockerfile  README.md  README_en.md  config.example.yml  docker-compose.example.yml  main.py  pyproject.toml  routes.py  test_log_docker.py
cert/: __init__.py  generator.py
cli/: __init__.py  main.py
config/: __init__.py  loader.py  models.py
proxy/: AGENTS.md  __init__.py  backend_client.py  context.py  converter.py  handler.py  interceptors.py  middleware.py  models.py  recorder.py  recording_interceptor.py  response_assembler.py  sse_coalescer.py  stream.py  stream_processor.py  transport.py
scripts/: setup_network.ps1  setup_network.sh
tests/: conftest.py  test_backend_client.py  test_config.py  test_converter.py  test_handler.py  test_models.py  test_recorder.py  test_response_assembler.py  test_sse_coalescer.py  test_stream.py  test_stream_processor.py
tests/agent/: README.md  contract-config.example.yml  record_agent_workflow.py  test_agent_workflow.py  test_contract_backend.py  test_recording_validation.py  test_replay.py  validate_recordings.py  verify_recording.py
tests/agent/mock_data/project_analysis__nonstream_reasoning/: expected_output.json  mock_data.json
tests/agent/mock_data/project_analysis__nonstream_think/: expected_output.json  mock_data.json
tests/agent/mock_data/project_analysis__stream_reasoning/: expected_output.json  mock_data.json
tests/agent/mock_data/project_analysis__stream_think/: expected_output.json  (+1 more)
tests/fixtures/: mock_server.py
tests/helpers/: request_signature.py  response_parsing.py
